--- a/src/main/resources/templates/includes/layout.html
+++ b/src/main/resources/templates/includes/layout.html
@@ -38,15 +38,15 @@
 		                        style="margin-right: 5px;">Idioma
 		                </a>
 		                <div class="dropdown-menu">
-		                    <a class="dropdown-item" href="#">Español</a>
-		                    <a class="dropdown-item" href="#">Inglés</a>
+		                    <a class="dropdown-item" th:href="@{/(lang=es)}">Español</a>
+		                    <a class="dropdown-item" th:href="@{/(lang=en)}">Inglés</a>
 		                </div>
 		            </li>
 		            <li class="nav-item">
 		                <a class="nav-link" href="/admin/ver-residencias">Admin</a>
 		            </li>
 		            <li class="nav-item">
-		                <a class="nav-link" href="/">Inicio</a>
+		                <a class="nav-link" href="/">[[#{nav.inicio}]]</a>
 		            </li>
 		            <li class="nav-item">
 		                <a class="nav-link" href="#nosotros">Nosotros</a>
@@ -88,8 +88,8 @@
 		                        style="margin-right: 5px;">Idioma
 		                </a>
 		                <div class="dropdown-menu">
-		                    <a class="dropdown-item" href="#">Español</a>
-		                    <a class="dropdown-item" href="#">Inglés</a>
+		                    <a class="dropdown-item" th:href="@{/(lang=es)}">Español</a>
+		                    <a class="dropdown-item" th:href="@{/(lang=en)}">Inglés</a>
 		                </div>
 		            </li>
 		            <li class="nav-item">
@@ -133,8 +133,8 @@
 		                        style="margin-right: 5px;">Idioma
 		                </a>
 		                <div class="dropdown-menu">
-		                    <a class="dropdown-item" href="#">Español</a>
-		                    <a class="dropdown-item" href="#">Inglés</a>
+		                    <a class="dropdown-item" th:href="@{/(lang=es)}">Español</a>
+		                    <a class="dropdown-item" th:href="@{/(lang=en)}">Inglés</a>
 		                </div>
 		            </li>
 		            <li class="nav-item">
