--- a/src/main/resources/templates/includes/layout.html
+++ b/src/main/resources/templates/includes/layout.html
@@ -35,11 +35,11 @@
 		                <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown"
 		                    aria-expanded="false">
 		                    <img th:src="@{/img/idioma.png}" alt="Dropdown" width="20" height="20"
-		                        style="margin-right: 5px;">Idioma
+		                        style="margin-right: 5px;">[[#{nav.idioma}]]
 		                </a>
 		                <div class="dropdown-menu">
-		                    <a class="dropdown-item" th:href="@{/(lang=es)}">Español</a>
-		                    <a class="dropdown-item" th:href="@{/(lang=en)}">Inglés</a>
+		                    <a class="dropdown-item" th:href="@{/(lang=es)}">[[#{nav.idioma.espanol}]]</a>
+		                    <a class="dropdown-item" th:href="@{/(lang=en)}">[[#{nav.idioma.ingles}]]</a>
 		                </div>
 		            </li>
 		            <li class="nav-item">
@@ -49,24 +49,24 @@
 		                <a class="nav-link" href="/">[[#{nav.inicio}]]</a>
 		            </li>
 		            <li class="nav-item">
-		                <a class="nav-link" href="#nosotros">Nosotros</a>
+		                <a class="nav-link" href="#nosotros">[[#{nav.nosotros}]]</a>
 		        	</li>
 		        	<li class="nav-item">
-		                <a class="nav-link" href="/usuario/ver-reserva">Ver reserva</a>
+		                <a class="nav-link" href="/usuario/ver-reserva">[[#{nav.ver-reserva}]]</a>
 		        	</li>
 		        	<li class="nav-item">
-		                <a class="nav-link" href="/login">Iniciar sesión</a>
+		                <a class="nav-link" href="/login">[[#{nav.iniciar-sesion}]]</a>
 		        	</li>
 		        	<form th:action="@{/logout}" method="post">
-		        <button type="submit" class="btn btn-danger mt-3">Cerrar sesión</button>
+		        <button type="submit" class="btn btn-danger mt-3">[[#{nav.cerrar-sesion}]]</button>
 		    </form>
 		        </ul>
 		    </div>
 		</nav>
 	</div>
 	
-	<!-- NAVBAR ADMIN -->
-	<div th:fragment="navbar-admin">
+	<!-- NAVBAR ADMIN VER-->
+	<div th:fragment="navbar-admin-ver">
 		<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #003B95;">
 		    <a class="navbar-brand" href="/">
 		        <img th:src="@{/img/logo.png}" alt="HotelStiven" width="30" height="30" class="d-inline-block align-text-top">
@@ -85,33 +85,33 @@
 		                <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown"
 		                    aria-expanded="false">
 		                    <img th:src="@{/img/idioma.png}" alt="Dropdown" width="20" height="20"
-		                        style="margin-right: 5px;">Idioma
+		                        style="margin-right: 5px;">[[#{nav.idioma}]]
 		                </a>
 		                <div class="dropdown-menu">
-		                    <a class="dropdown-item" th:href="@{/(lang=es)}">Español</a>
-		                    <a class="dropdown-item" th:href="@{/(lang=en)}">Inglés</a>
+		                    <a class="dropdown-item" th:href="@{/admin/ver-residencias(lang=es)}">Español</a>
+		                    <a class="dropdown-item" th:href="@{/admin/ver-residencias(lang=en)}">Inglés</a>
 		                </div>
 		            </li>
 		            <li class="nav-item">
-		                <a class="nav-link" href="/">Inicio</a>
+		                <a class="nav-link" href="/">[[#{nav.inicio}]]</a>
 		            </li>
 		            <li class="nav-item">
-		                <a class="nav-link" href="/admin/ver-residencias">Ver residencias</a>
+		                <a class="nav-link" href="/admin/ver-residencias">[[#{ver.residencias}]]</a>
 		            </li>
 		            <li class="nav-item">
-		                <a class="nav-link" href="/admin/crear-residencia">Crear residencia</a>
+		                <a class="nav-link" href="/admin/crear-residencia">[[#{crear.residencia}]]</a>
 		            </li>
 
 		        	<form th:action="@{/logout}" method="post">
-		        <button type="submit" class="btn btn-danger mt-3">Cerrar sesión</button>
+		        <button type="submit" class="btn btn-danger mt-3">[[#{nav.cerrar-sesion}]]</button>
 		    </form>
 		        </ul>
 		    </div>
 		</nav>
 	</div>
-	
-	<!-- NAVBAR INICIAR SESION Y REGISTRARSE -->
-	<div th:fragment="navbar-iniciar-registrar">
+
+	<!-- NAVBAR ADMIN CREAR-->
+	<div th:fragment="navbar-admin-crear">
 		<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #003B95;">
 		    <a class="navbar-brand" href="/">
 		        <img th:src="@{/img/logo.png}" alt="HotelStiven" width="30" height="30" class="d-inline-block align-text-top">
@@ -130,15 +130,95 @@
 		                <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown"
 		                    aria-expanded="false">
 		                    <img th:src="@{/img/idioma.png}" alt="Dropdown" width="20" height="20"
-		                        style="margin-right: 5px;">Idioma
+		                        style="margin-right: 5px;">[[#{nav.idioma}]]
 		                </a>
 		                <div class="dropdown-menu">
-		                    <a class="dropdown-item" th:href="@{/(lang=es)}">Español</a>
-		                    <a class="dropdown-item" th:href="@{/(lang=en)}">Inglés</a>
+		                    <a class="dropdown-item" th:href="@{/admin/crear-residencia(lang=es)}">Español</a>
+		                    <a class="dropdown-item" th:href="@{/admin/crear-residencia(lang=en)}">Inglés</a>
 		                </div>
 		            </li>
 		            <li class="nav-item">
-		                <a class="nav-link" href="/">Inicio</a>
+		                <a class="nav-link" href="/">[[#{nav.inicio}]]</a>
+		            </li>
+		            <li class="nav-item">
+		                <a class="nav-link" href="/admin/ver-residencias">[[#{ver.residencias}]]</a>
+		            </li>
+		            <li class="nav-item">
+		                <a class="nav-link" href="/admin/crear-residencia">[[#{crear.residencia}]]</a>
+		            </li>
+
+		        	<form th:action="@{/logout}" method="post">
+		        <button type="submit" class="btn btn-danger mt-3">[[#{nav.cerrar-sesion}]]</button>
+		    </form>
+		        </ul>
+		    </div>
+		</nav>
+	</div>
+	
+	<!-- NAVBAR INICIAR SESION-->
+	<div th:fragment="navbar-iniciar">
+		<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #003B95;">
+		    <a class="navbar-brand" href="/">
+		        <img th:src="@{/img/logo.png}" alt="HotelStiven" width="30" height="30" class="d-inline-block align-text-top">
+		        HotelStiven
+		    </a>
+		
+		    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+		        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		        <span class="navbar-toggler-icon"></span>
+		    </button>
+		
+		    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+		        <ul class="navbar-nav ml-auto">
+		            <!-- Aquí está el idioma -->
+		            <li class="nav-item dropdown">
+		                <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown"
+		                    aria-expanded="false">
+		                    <img th:src="@{/img/idioma.png}" alt="Dropdown" width="20" height="20"
+		                        style="margin-right: 5px;">[[#{nav.idioma}]]
+		                </a>
+		                <div class="dropdown-menu">
+		                    <a class="dropdown-item" th:href="@{/login(lang=es)}">[[#{nav.idioma.espanol}]]</a>
+		                    <a class="dropdown-item" th:href="@{/login(lang=en)}">[[#{nav.idioma.ingles}]]</a>
+		                </div>
+		            </li>
+		            <li class="nav-item">
+		                <a class="nav-link" href="/">[[#{nav.inicio}]]</a>
+		            </li>
+		        </ul>
+		    </div>
+		</nav>
+	</div>
+    
+    <!-- NAVBAR REGISTRAR -->
+	<div th:fragment="navbar-registrar">
+		<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #003B95;">
+		    <a class="navbar-brand" href="/">
+		        <img th:src="@{/img/logo.png}" alt="HotelStiven" width="30" height="30" class="d-inline-block align-text-top">
+		        HotelStiven
+		    </a>
+		
+		    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+		        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		        <span class="navbar-toggler-icon"></span>
+		    </button>
+		
+		    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+		        <ul class="navbar-nav ml-auto">
+		            <!-- Aquí está el idioma -->
+		            <li class="nav-item dropdown">
+		                <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown"
+		                    aria-expanded="false">
+		                    <img th:src="@{/img/idioma.png}" alt="Dropdown" width="20" height="20"
+		                        style="margin-right: 5px;">[[#{nav.idioma}]]
+		                </a>
+		                <div class="dropdown-menu">
+		                    <a class="dropdown-item" th:href="@{/registrarse(lang=es)}">[[#{nav.idioma.espanol}]]</a>
+		                    <a class="dropdown-item" th:href="@{/registrarse(lang=en)}">[[#{nav.idioma.ingles}]]</a>
+		                </div>
+		            </li>
+		            <li class="nav-item">
+		                <a class="nav-link" href="/">[[#{nav.inicio}]]</a>
 		            </li>
 		        </ul>
 		    </div>
@@ -152,7 +232,7 @@
 	<!-- FOOTER -->
 	<footer th:fragment="footer" class="footer mt-3 py-3 bg-dark text-white">
 	    <div class="container text-center">
-	        <span>© 2024 HotelStiven. Todos los derechos reservados.</span>
+	        <span>© [[#{footer.derecho-reservados}]]</span>
 	    </div>
 	</footer>
 </body>
