--- a/src/main/resources/templates/registrarse.html
+++ b/src/main/resources/templates/registrarse.html
@@ -22,7 +22,7 @@
         }
     </style>
 
-	<div th:replace="includes/layout :: navbar-iniciar-registrar"></div>
+	<div th:replace="includes/layout :: navbar-registrar"></div>
 
 	<div class="container mt-5">
 	    <div class="row justify-content-center">
@@ -32,44 +32,44 @@
 	
 	        <div class="col-md-5">
 	            <div class="card">
-	                <div class="card-header" style="background-color: #003B95; color: white;">Registro</div>
+	                <div class="card-header" style="background-color: #003B95; color: white;">[[#{registro}]]</div>
 	                <div class="card-body">
 	                    <form th:action="@{/registrarse}" method="post" th:object="${usuario}">
 	                        <div class="form-row">
 	                            <div class="form-group col-md-6">
-	                                <label for="nombre">Nombre</label>
-	                                <input type="text" class="form-control" name="nombre" placeholder="Ingrese su nombre">
+	                                <label for="nombre">[[#{contacto.nombre}]]</label>
+	                                <input type="text" class="form-control" name="nombre">
 	                            </div>
 	                            <div class="form-group col-md-6">
-	                                <label for="apellido">Apellido</label>
-	                                <input type="text" class="form-control" name="apellido" placeholder="Ingrese su apellido">
+	                                <label for="apellido">[[#{contacto.apellido}]]</label>
+	                                <input type="text" class="form-control" name="apellido">
 	                            </div>
 	                        </div>
 	                        <div class="form-row">
 	                            <div class="form-group col-md-6">
-	                                <label for="correo">Correo Electrónico</label>
-	                                <input type="email" class="form-control" name="correo" placeholder="Ingrese su correo electrónico">
+	                                <label for="correo">[[#{contacto.correo}]]</label>
+	                                <input type="email" class="form-control" name="correo">
 	                            </div>
 	                            <div class="form-group col-md-6">
-	                                <label for="userName">Usuario</label>
-	                                <input type="text" class="form-control" name="userName" placeholder="Ingrese su nombre de usuario">
+	                                <label for="userName">[[#{login.usuario}]]</label>
+	                                <input type="text" class="form-control" name="userName">
 	                            </div>
 	                            <div class="form-group col-md-12">
-	                                <label for="password">Contraseña</label>
-	                                <input type="password" class="form-control" name="password" placeholder="Ingrese su contraseña">
+	                                <label for="password">[[#{login.contrasena}]]</label>
+	                                <input type="password" class="form-control" name="password">
 	                            </div>
 	                        </div>
-	                        <button type="submit" class="btn btn-primary btn-block" style="background-color: #003B95;">Registrarse</button>
+	                        <button type="submit" class="btn btn-primary btn-block" style="background-color: #003B95;">[[#{registrarse}]]</button>
 	                    </form>
 	                </div>
 	                <div class="card-footer">
-	                    <p class="text-center">¿Ya tienes una cuenta? <a href="/login">Inicia sesión aquí</a></p>
+	                    <p class="text-center">[[#{tiene.cuenta}]] <a href="/login">[[#{si.cuenta}]]</a></p>
 	                </div>
 	            </div>
 	            <footer class="footer mt-auto py-3">
 	                <div class="container text-center">
-	                    <p class="mb-0 small-text" style="color: black;">Al registrarse, aceptas nuestros <a href="#">Términos y condiciones</a> y la <a href="#">Política de privacidad</a>.</p>
-	                    <p class="mb-0 small-text" style="color: black;">Todos los derechos reservados. Copyright (2024) - HotelStiven.com™</p>
+	                    <p class="mb-0 small-text" style="color: black;">[[#{login.terminos1}]]</p>
+	                    <p class="mb-0 small-text" style="color: black;">[[#{login.terminos2}]] Copyright (2024) - HotelStiven.com™</p>
 	                </div>
 	            </footer>
 	        </div>
