--- a/src/main/resources/templates/includes/layout.html
+++ b/src/main/resources/templates/includes/layout.html
@@ -52,7 +52,7 @@
 		                <a class="nav-link" href="#nosotros">[[#{nav.nosotros}]]</a>
 		        	</li>
 		        	<li class="nav-item">
-		                <a class="nav-link" href="/usuario/ver-reserva">[[#{nav.ver-reserva}]]</a>
+		                <a class="nav-link" href="/habitacion/usuario/2">[[#{nav.ver-reserva}]]</a>
 		        	</li>
 		        	<li class="nav-item">
 		                <a class="nav-link" href="/login">[[#{nav.iniciar-sesion}]]</a>
