Agregando EstadosEntity y diseñando vistas

--- a/src/main/resources/templates/admin/crear-residencia.html
+++ b/src/main/resources/templates/admin/crear-residencia.html
@@ -58,8 +58,8 @@
             </div>
             <div class="col">
                 <div class="form-group">
-                    <label for="precio" class="form-label">[[#{ver.precio}]]</label>
-                    <input class="form-control" type="number" min="0" th:field="*{precio}" id="precio" required />
+                    <label for="precio" class="form-label">[[#{ver.telefono}]]</label>
+                    <input class="form-control" type="text" th:field="*{telefono}" id="telefono" required />
                 </div>
             </div>
         </div>
