--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -111,7 +111,7 @@
 							th:text="${residencia.descripcion}"></span>
 					</p>
 					<p>
-						<strong>[[#{ver.precio}]]:</strong> <span th:text="${residencia.precio}"></span>
+						<strong>[[#{ver.telefono}]]:</strong> <span th:text="${residencia.telefono}"></span>
 					</p>
 					<p>
 						<strong>[[#{ver.ubicacion}]]:</strong> <span
