Diseñando y estilizando vistas

--- a/src/main/resources/templates/habitacion/habitaciones-por-residencia.html
+++ b/src/main/resources/templates/habitacion/habitaciones-por-residencia.html
@@ -11,7 +11,7 @@
     <div class="container">
     <h2 class="text-center my-4 font-weight-bold">Habitaciones por residencia</h2>
 
-    <table class="table mt-4">
+    <table class="table mt-4 table-striped">
         <thead>
             <tr>
 						<th>ID</th>
