--- a/src/main/resources/templates/habitacion/habitaciones-por-usuario.html
+++ b/src/main/resources/templates/habitacion/habitaciones-por-usuario.html
@@ -1,32 +1,50 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title>Habitaciones por Usuario</title>
+<head th:replace="includes/layout :: head">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        .container {
+            margin-top: 50px;
+        }
+        h1 {
+            text-align: center;
+            margin-bottom: 30px;
+        }
+        .table th, .table td {
+            vertical-align: middle;
+        }
+    </style>
 </head>
 <body>
-    <h1>Habitaciones del Usuario</h1>
-    <table>
-        <thead>
-            <tr>
-            	<th>Categoría</th>
-                <th>Hotel</th>
-                <th>Ubicacion</th>
-                <th>Descripción</th>
-                <th>Habitacion</th>
-                <th>Precio</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr th:each="habitacion : ${habitaciones}">
-                <td th:text="${habitacion.residencia.categoria}"></td>
-                <td th:text="${habitacion.residencia.nombre}"></td>
-                <td th:text="${habitacion.residencia.ubicacion}"></td>
-                <td th:text="${habitacion.residencia.descripcion}"></td>
-                <td th:text="${habitacion.nombre}"></td>
-                <td th:text="${habitacion.precio}"></td>
-            </tr>
-        </tbody>
-    </table>
+
+    <div th:replace="includes/layout :: navbar-ver-habitaciones-usuario"></div>
+
+    <div class="container">
+        <h2 class="text-center my-4 font-weight-bold">Habitaciones del Usuario</h2>
+        
+        <table class="table table-striped mt-4">
+            <thead>
+                <tr>
+                    <th>Categoría</th>
+                    <th>Hotel</th>
+                    <th>Ubicación</th>
+                    <th>Descripción</th>
+                    <th>Habitación</th>
+                    <th>Precio</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="habitacion : ${habitaciones}">
+                    <td th:text="${habitacion.residencia.categoria}"></td>
+                    <td th:text="${habitacion.residencia.nombre}"></td>
+                    <td th:text="${habitacion.residencia.ubicacion}"></td>
+                    <td th:text="${habitacion.residencia.descripcion}"></td>
+                    <td th:text="${habitacion.nombre}"></td>
+                    <td th:text="${habitacion.precio}"></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
 </body>
 </html>
-
